--- a/wp-content/themes/polytechnic/theme-core/theme-assets/stylesheets/theme-5-media-queries.css
+++ b/wp-content/themes/polytechnic/theme-core/theme-assets/stylesheets/theme-5-media-queries.css
@@ -46,37 +46,15 @@
 }
 
 
-/* #Tablet (Portrait) */
-/*@media only screen and (min-width: 768px) and (max-width: 959px) {
 
-	.one-fifth.column {width: 17.6%;}
-	.one-sixth.column {width: 14.5%;}
-
-	/*  - ShareDaddy -  */
-	/*#page div.sharedaddy .sd-content li {width: 33% !important;}
-	
-	/*  - Sticky Header - */
-	/*#page #section-sticky-header nav ul.mega-menu > li {
-	  margin-left: 15px !important;
-	  margin-right: 15px !important;
-	}
-	#page .sticky ul.social li {width: 1.4rem;}
-
-	/*  - Single Image Hover -  */
-   /*#page .module-content p {
-	  font-size: 1rem !important;
-	  line-height: 1.2;
-	  font-weight: 700;
-	}
-	.course-container article.course.has-post-thumbnail .entry {
-      width: 64%;
-    }
-
-}*/
 
 
 /*  #Mobile (Portrait) */
-@media only screen and (max-width: 959px) {
+@media only screen and (max-width: 992px) {
+
+    #click-menu {
+        display: block !important;
+    }
 
 	.one-fifth.column {width: 100%;}
 	.one-sixth.column {width: 100%;}
@@ -104,8 +82,8 @@
 	#section-sub-footer .right{display: none;}
 
 	/* NAV TOGGLE */
-	#superfish-menu { position: absolute; left: -9999px;} 	
-	#responsive-nav { display: inline-block; } 
+	#superfish-menu { position: absolute; left: -9999px;}
+	#responsive-nav { display: inline-block; }
 
 	#site-heading{text-align: center !important; width: 100%;}
 
@@ -132,8 +110,8 @@
 	}
 	  #page ul.social li {width: 1.4rem;}
 	  #page div.sharedaddy .sd-content li {width: 33% !important;}
-	  
-	 
+
+
 	 /*  - Sticky Header - */
 	#page #section-super-header #section-sticky-header-background,
 	#page #section-super-header #section-sticky-header {
@@ -180,18 +158,18 @@
 	#page input.course-search-button {
 	  margin-bottom: 2rem;
 	}
-    
+
     div.table-wrapper .scrollable {
     	border-left: 1px solid #ebebeb;
     	border-right: 2px solid #ebebeb;
     	border-radius: 6px;
     }
     table.responsive {
-    	margin-bottom: 0; 
+    	margin-bottom: 0;
     	border-left: 0px solid transparent;
     	border-right: 0px solid transparent;
     }
-    
+
     .pinned {
 	  background: none repeat scroll 0 0 #fff;
 	  border-left: 2px solid #ebebeb;
@@ -207,7 +185,7 @@
 	.pinned table { border-right: none; border-left: none; width: 100%; }
     .pinned table th, .pinned table td { white-space: nowrap; }
     .pinned td:last-child { border-bottom: 0; }
-    
+
     div.table-wrapper {
 	  border-right: 2px solid transparent;
 	  margin-bottom: 20px;
@@ -216,9 +194,9 @@
 	}
 	div.table-wrapper table { margin-bottom: 0; }
     div.table-wrapper div.scrollable { margin-left: 40%; }
-    div.table-wrapper div.scrollable { 
-    	overflow: scroll; 
-    	overflow-y: hidden; 
+    div.table-wrapper div.scrollable {
+    	overflow: scroll;
+    	overflow-y: hidden;
     	-webkit-overflow-scrolling: touch !important;
     }
     .search table#course-list, table#course-list {
@@ -226,7 +204,7 @@
 	}
 	.is-handheld p {margin-bottom: 0; text-align: center;}
 	.is-handheld .arrow {text-align: center;}
-    
+
     table.responsive td, table.responsive th { position: relative; white-space: nowrap; overflow: hidden; }
     table.responsive th:nth-child(2), table.responsive td:nth-child(2), table.responsive td:nth-child(2), table.responsive.pinned td { display: none; }
 
@@ -235,11 +213,11 @@
 
 
 /* #Mobile (Landscape) */
-@media only screen and (min-width: 480px) and (max-width: 959px) {
+@media only screen and (min-width: 480px) and (max-width: 992px) {
 	.site-title > img {float: none !important; margin-top: -3px !important;}
 	.vc_responsive .wpb_row .vc_span3 {width: 100% !important;}
 	#page div.sharedaddy .sd-content li {width: 50% !important;}
-	
+
 	/*  - STICKY HEADER -  */
 	#page .sticky {display: none !important;}
 
@@ -257,7 +235,7 @@
 
 /* ADDED/AUDIT MEDIA QUERIES */
 /*  #Mobile (Landscape) */
-@media only screen and (max-width: 959px) {
+@media only screen and (max-width: 992px) {
 
 	#section-tophat .sixteen.columns, #section-tophat .container, #section-tophat .left .th_banner, .th_show_hide.th_flag_toggle {float: right !important; padding: 0 !important;}
 	#section-tophat .right {display: none;}
