Modified css on 2016-06-21

--- a/wp-content/themes/polytechnic/theme-core/theme-assets/stylesheets/theme-4-plugins.css
+++ b/wp-content/themes/polytechnic/theme-core/theme-assets/stylesheets/theme-4-plugins.css
@@ -1355,7 +1355,7 @@ a.remove:hover {
         font-size: 1.3rem;
         font-weight: 400;
         margin-bottom: 0rem;
-        text-align: left !important;
+        /*text-align: left !important;*/
       }
         #section-tophat-dropdown .tribe-event-title > a {
           font-weight: 400;
